--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ project(AdventOfCode-2021 VERSION 0.0.1 LANGUAGES CXX)
 add_executable(day01 ./day_01/day01.cpp)
 add_executable(day02 ./day_02/day02.cpp)
 add_executable(day03 ./day_03/day03.cpp)
-
+add_executable(day04 ./day_04/day04.cpp)
