Add cmake entry and solution for day-06

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(day02 ./day_02/day02.cpp)
 add_executable(day03 ./day_03/day03.cpp)
 add_executable(day04 ./day_04/day04.cpp)
 add_executable(day05 ./day_05/day05.cpp)
+add_executable(day06 ./day_06/day06.cpp)
