--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(day03 ./day_03/day03.cpp)
 add_executable(day04 ./day_04/day04.cpp)
 add_executable(day05 ./day_05/day05.cpp)
 add_executable(day06 ./day_06/day06.cpp)
+add_executable(day07 ./day_07/day07.cpp)
